--- a/assets/scss/_mixin.scss
+++ b/assets/scss/_mixin.scss
@@ -28,6 +28,7 @@
             padding-right: 25px;
             .dropdown-menu {
                 right: 0;
+                left: auto;
             }
         }
     }
